Renamed from Maps to Dictionaries
(It was a toss-up...)

--- a/Project.toml
+++ b/Project.toml
@@ -1,5 +1,5 @@
 authors = ["Andy Ferris <andy.ferris@roames.com.au>"]
-name = "Maps"
+name = "Dictionaries"
 uuid = "85a47980-9c8c-11e8-2b9f-f7ca1fa99fb4"
 version = "0.1.0"
 
