Small benchmarking updates, sharetokens fix

--- a/Project.toml
+++ b/Project.toml
@@ -13,3 +13,8 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
 test = ["Test"]
+
+[compat]
+julia = "1"
+SplitApplyCombine = "0.4.1"
+Indexing = "1.1"
