--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,8 @@ jobs:
           - '1.3'
           - '1.4'
           - '1.5'
+          - '1.6'
+          - '1.7'
           - 'nightly'
         os:
           - ubuntu-latest
@@ -37,10 +39,12 @@ jobs:
           - {os: 'macOS-latest', version: '1.2'}
           - {os: 'macOS-latest', version: '1.3'}
           - {os: 'macOS-latest', version: '1.4'}
+          - {os: 'macOS-latest', version: '1.5'}
           - {os: 'windows-latest', version: '1.1'}
           - {os: 'windows-latest', version: '1.2'}
           - {os: 'windows-latest', version: '1.3'}
           - {os: 'windows-latest', version: '1.4'}
+          - {os: 'windows-latest', version: '1.5'}
     steps:
       - uses: actions/checkout@v1
       - uses: julia-actions/setup-julia@latest
