--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,16 +30,8 @@ jobs:
           # MacOS not available on x86
           - {os: 'macOS-latest', arch: 'x86'}
           # Don't test on all versions
-          - {os: 'macOS-latest', version: '1.1'}
-          - {os: 'macOS-latest', version: '1.2'}
-          - {os: 'macOS-latest', version: '1.3'}
-          - {os: 'macOS-latest', version: '1.4'}
-          - {os: 'macOS-latest', version: '1.5'}
-          - {os: 'windows-latest', version: '1.1'}
-          - {os: 'windows-latest', version: '1.2'}
-          - {os: 'windows-latest', version: '1.3'}
-          - {os: 'windows-latest', version: '1.4'}
-          - {os: 'windows-latest', version: '1.5'}
+          # - {os: 'macOS-latest', version: '1.5'}
+          # - {os: 'windows-latest', version: '1.5'}
     steps:
       - uses: actions/checkout@v1
       - uses: julia-actions/setup-julia@latest
@@ -48,6 +40,7 @@ jobs:
           arch: ${{ matrix.arch }}
       - uses: julia-actions/julia-buildpkg@latest
       - uses: julia-actions/julia-runtest@latest
-      - uses: julia-actions/julia-uploadcodecov@latest
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+      - uses: julia-actions/julia-processcoverage@v1
+      - uses: codecov/codecov-action@v2
+        with:
+          files: lcov.info
