--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -2,10 +2,12 @@ name: Run benchmarks
 
 on:
   pull_request:
+    types: [opened, synchronize, reopened, labeled]
 
 jobs:
   Benchmark:
     runs-on: ubuntu-latest
+    if: contains(github.event.pull_request.labels.*.name, 'benchmark')
     steps:
       - uses: actions/checkout@v6
       - uses: julia-actions/setup-julia@latest
